depends_core/src/macros/dependee/snapshots/depends_core__macros__dependee__tests__dependee_generics_custom_clean.snap
---
source: depends_core/src/macros/dependee/mod.rs
assertion_line: 294
expression: format_source(derive_dependee(input).to_string().as_str())
---
struct FooNode<T> {
    dependencies: SomeDeps<D, E>,
    data: ::std::cell::RefCell<::depends::core::NodeState<Foo<T>>>,
    id: usize,
}
impl<T> FooNode<T> {
    pub fn new(dependencies: SomeDeps<D, E>, data: Foo<T>) -> ::std::sync::Arc<FooNode<T>> {
        Self::new_with_id(dependencies, data, ::depends::core::next_node_id())
    }

    pub fn new_with_id(
        dependencies: SomeDeps<D, E>,
        data: Foo<T>,
        id: usize,
    ) -> ::std::sync::Arc<FooNode<T>> {
        ::std::sync::Arc::new(FooNode {
            dependencies,
            data: ::std::cell::RefCell::new(::depends::core::NodeState::new_dependee(data)),
            id,
        })
    }
}
impl<T> ::depends::core::Identifiable for FooNode<T> {
    fn id(&self) -> usize {
        self.id
    }
}
impl<T> Foo<T> {
    pub fn into_node(self, dependencies: SomeDeps<D, E>) -> ::std::sync::Arc<FooNode<T>> {
        FooNode::new(dependencies, self)
    }
}
impl<T> ::depends::core::Named for Foo<T> {
    fn name() -> &'static str {
        "Foo"
    }
}
impl<T> ::depends::core::Named for FooNode<T> {
    fn name() -> &'static str {
        Foo::<T>::name()
    }
}
impl<T> ::depends::core::Depends for Foo<T> {
    type Input < 'a > = < SomeDeps < D , E > as :: depends :: core :: Resolve > :: Output < 'a > where Self : 'a ;
}
impl<T> ::depends::core::Resolve for FooNode<T> {
    type Output < 'a > = :: std :: cell :: Ref < 'a , :: depends :: core :: NodeState < Foo >> where Self : 'a ;

    fn resolve(&self, visitor: &mut impl ::depends::core::Visitor) -> Self::Output<'_> {
        use ::depends::core::{Clean, IsDirty};
        use ::std::ops::DerefMut;
        visitor.touch(self);
        if visitor.visit(self) {
            let input = self.dependencies.resolve(visitor);
            if input.is_dirty() {
                let mut node_state = self.data.borrow_mut();
                node_state.clean();
                node_state.deref_mut().update_mut(input);
                node_state.update_node_hash(&mut visitor.hasher());
            }
        }
        visitor.leave(self);
        self.data.borrow()
    }
}
impl<T> ::depends::core::HashValue for Foo<T> {
    fn hash_value(&self, hasher: &mut impl ::std::hash::Hasher) -> ::depends::core::NodeHash {
        ::depends::core::NodeHash::Hashed({
            self.hash(hasher);
            hasher.finish()
        })
    }
}

